--- a/.github/workflows/sync_gh_pages.yaml
+++ b/.github/workflows/sync_gh_pages.yaml
@@ -25,4 +25,4 @@ jobs:
       - name: add CNAME
         run: mv CNAME docs/CNAME
       - name: push
-        run: git push -f --set-upstream origin gh-pages
+        run: npm run git
