--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eject": "react-scripts eject",
     "rm": "rm -rf docs",
     "mv": "mv build docs",
-    "git": "git add . && git commit -m deploy && git push --set-upstream origin gh-pages",
+    "git": "git add . && git commit -m deploy && git push -f --set-upstream origin gh-pages",
     "gh_pages_build": "npm run rm && npm run build && npm run mv"
   },
   "eslintConfig": {
