--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://www.sakumondo.com/",
   "dependencies": {
+    "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,11 +43,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.13.1",
     "@types/crypto-js": "^4.1.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6"
+    "@types/react-dom": "^18.0.6",
+    "@types/react-modal": "^3.13.1"
   }
 }
