--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "homepage": "https://www.sakumondo.com/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
+    "jotai": "^1.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
