--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/react-modal": "^3.13.1"
+    "@types/react-modal": "^3.13.1",
+    "puppeteer": "^16.1.0"
   }
 }
