--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "classnames": "^2.3.1",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.5",
     "jotai": "^1.7.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
