add_todays_questionを手動実行可能にした

--- a/.github/workflows/add_todays_question.yaml
+++ b/.github/workflows/add_todays_question.yaml
@@ -1,7 +1,7 @@
 name: add_todays_question
 
 on:
-  # Runs on pushes targeting the default branch
+  workflow_dispatch:
   schedule:
     - cron: "0 23 * * *"
 
