--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-modal": "^3.13.1",
+    "node-fetch": "^3.2.10",
     "puppeteer": "^16.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
